Adds new photo, adds first 3 members

--- a/index.html
+++ b/index.html
@@ -6,7 +6,52 @@
 </head>
 <body>
     <header>
+        <h1 class="title">Meet Our Team</h1>
     </header>
-    <main></main>
+    <main>
+        <div class="container">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo ea doloremque architecto sit ab ad harum quis tenetur, voluptas et sint dolorem libero explicabo eos eveniet. Ullam quas cupiditate rem!</p>
+        
+            <div class="profiles">
+                <div class="banner clearfix">
+                    <img src="imgs/male1.png" alt="">
+                    <div class="name">MARCO BIANCHI</div>
+                    <div class="role">Designer</div>
+                    <div class="e-mail"><a href="https://www.google.it/">marcobianchi@team.com</a> </div>
+                </div>
+
+                <div class="banner clearfix">
+                    <img src="imgs/female1.png" alt="">
+                    <div class="name">LAURA ROSSI</div>
+                    <div class="role">front-end Developer</div>
+                    <div class="e-mail"><a href="https://www.google.it/">laurarossi@team.com</a> </div>
+                </div>
+
+                <div class="banner clearfix">
+                    <img src="imgs/male1.png" alt="">
+                    <div class="name">GIORGIO VERDI</div>
+                    <div class="role">Back-end Developer</div>
+                    <div class="e-mail"><a href="https://www.google.it/">giorgioverdi@team.com</a></div>
+                </div>
+
+                <div class="banner clearfix">
+                    <img src="imgs/male1.png" alt="">
+                    <div class="name">MARCO BIANCHI</div>
+                    <div class="role">dlkfdl</div>
+                    <div class="e-mail">dkbdfk</div>
+                </div>
+
+                <div class="banner clearfix">
+                    <img src="imgs/male1.png" alt="">
+                    <div class="name">MARCO BIANCHI</div>
+                </div>
+
+                <div class="banner clearfix">
+                    <img src="imgs/male1.png" alt="">
+                    <div class="name">MARCO BIANCHI</div>
+                </div>
+            </div>
+    </div>
+    </main>
 </body>
 </html>
