remove class role and e-mail

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <div class="banner clearfix">
                     <img src="imgs/male1.png" alt="">
                     <div class="name">MARCO BIANCHI</div>
-                    <div class="role">Designer</div>
-                    <div class="e-mail"><a href="https://www.google.it/">marcobianchi@team.com</a> </div>
+                    <div>Designer</div>
+                    <div><a href="https://www.google.it/">marcobianchi@team.com</a> </div>
                 </div>
 
                 <div class="banner clearfix">
@@ -26,29 +26,34 @@
                     <div class="role">front-end Developer</div>
                     <div class="e-mail"><a href="https://www.google.it/">laurarossi@team.com</a> </div>
                 </div>
-
+                
                 <div class="banner clearfix">
-                    <img src="imgs/male1.png" alt="">
+                    <img src="imgs/male2.png" alt="">
                     <div class="name">GIORGIO VERDI</div>
-                    <div class="role">Back-end Developer</div>
-                    <div class="e-mail"><a href="https://www.google.it/">giorgioverdi@team.com</a></div>
+                    <div>Back-end Developer</div>
+                    <div><a href="https://www.google.it/">giorgioverdi@team.com</a></div>
                 </div>
 
                 <div class="banner clearfix">
-                    <img src="imgs/male1.png" alt="">
-                    <div class="name">MARCO BIANCHI</div>
-                    <div class="role">dlkfdl</div>
-                    <div class="e-mail">dkbdfk</div>
+                    <img src="imgs/female2.png" alt="">
+                    <div class="name">MARTA IPSUM</div>
+                    <div>SEO Specialist</div>
+                    <div><a href="https://www.google.it/">martinaipsum@team.com</a></div>
+                </div>
+
+
+                <div class="banner clearfix">
+                    <img src="imgs/male3.png" alt="">
+                    <div class="name">ROBERTO LOREM</div>
+                    <div>Project Manager</div>
+                    <div><a href="https://www.google.it/">robertolorem@team.com</a></div>
                 </div>
 
                 <div class="banner clearfix">
-                    <img src="imgs/male1.png" alt="">
-                    <div class="name">MARCO BIANCHI</div>
-                </div>
-
-                <div class="banner clearfix">
-                    <img src="imgs/male1.png" alt="">
-                    <div class="name">MARCO BIANCHI</div>
+                    <img src="imgs/female3.png" alt="">
+                    <div class="name">DANIELA AMET</div>
+                    <div>Analyst</div>
+                    <div><a href="https://www.google.it/">danielaamet@team.com</a></div>
                 </div>
             </div>
     </div>
