remove clearfix to banner, add clearfix to profiles

--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
         <div class="container">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo ea doloremque architecto sit ab ad harum quis tenetur, voluptas et sint dolorem libero explicabo eos eveniet. Ullam quas cupiditate rem!</p>
         
-            <div class="profiles">
-                <div class="banner clearfix">
+            <div class="profiles clearfix">
+                <div class="banner">
                     <img src="imgs/male1.png" alt="">
                     <div class="name">MARCO BIANCHI</div>
                     <div>Designer</div>
                     <div><a href="https://www.google.it/">marcobianchi@team.com</a> </div>
                 </div>
 
-                <div class="banner clearfix">
+                <div class="banner">
                     <img src="imgs/female1.png" alt="">
                     <div class="name">LAURA ROSSI</div>
                     <div class="role">front-end Developer</div>
                     <div class="e-mail"><a href="https://www.google.it/">laurarossi@team.com</a> </div>
                 </div>
                 
-                <div class="banner clearfix">
+                <div class="banner">
                     <img src="imgs/male2.png" alt="">
                     <div class="name">GIORGIO VERDI</div>
                     <div>Back-end Developer</div>
                     <div><a href="https://www.google.it/">giorgioverdi@team.com</a></div>
                 </div>
 
-                <div class="banner clearfix">
+                <div class="banner">
                     <img src="imgs/female2.png" alt="">
                     <div class="name">MARTA IPSUM</div>
                     <div>SEO Specialist</div>
@@ -42,14 +42,14 @@
                 </div>
 
 
-                <div class="banner clearfix">
+                <div class="banner">
                     <img src="imgs/male3.png" alt="">
                     <div class="name">ROBERTO LOREM</div>
                     <div>Project Manager</div>
                     <div><a href="https://www.google.it/">robertolorem@team.com</a></div>
                 </div>
 
-                <div class="banner clearfix">
+                <div class="banner">
                     <img src="imgs/female3.png" alt="">
                     <div class="name">DANIELA AMET</div>
                     <div>Analyst</div>
