add text-align on p, remove classes

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <div class="banner">
                     <img src="imgs/female1.png" alt="">
                     <div class="name">LAURA ROSSI</div>
-                    <div class="role">front-end Developer</div>
-                    <div class="e-mail"><a href="https://www.google.it/">laurarossi@team.com</a> </div>
+                    <div>front-end Developer</div>
+                    <div><a href="https://www.google.it/">laurarossi@team.com</a> </div>
                 </div>
                 
                 <div class="banner">
